--- a/midterm-report/impl.tex
+++ b/midterm-report/impl.tex
@@ -17,7 +17,7 @@ Despite the fact the Pre and the Android are both running Linux OSes on an arm c
 
 \subsection{X-Server}
 
-We made a number of important design decisions, many of which were in response to unexpected implementation difficulties.
+We made a number of important design decisions, many of which were in response to unexpected implementation difficulties.  The result of our X server (including a fixed Xsdl implementation) work is available on the website.
 \subsubsection{DDX}
 The X-Server architecture contains multiple Device Dependent X (DDX) implementations.  The most used one is 'xfree86', but there are others including 'kdrive' \cite{x_glossary}.  We chose to use kdrive because of the Xsdl component it contains, which allows one to run X using SDL as a backend.  Unfortunately Xsdl is so out of date that it was recently removed from the X project altogether due to being broken and unmaintained.
 From X version control: ``if anyone uses this in production, a big scary monster will eat them'' \cite{x_quote}.  The result of this was much work spending fixing Xsdl and bringing it up to date to work with the rest of X.  Fixes including interactions with the X server, as well as fixing the rendering code and the input handling.
@@ -25,8 +25,21 @@ From X version control: ``if anyone uses this in production, a big scary monster
 As described above, the code we started with used Simple Direct Library (SDL) \cite{sdl} for input and rendering.  Once we had achieved this functionaliy, we noticed the display lagged when doing even basic things like moving the cursor.  Previous experience working with SDL on this device suggested that using GLESv2 \cite{gles} and custom shaders would improve a task even as simple as blitting, so we ported the rendering bits to use GLESv2.
 
 \subsubsection{Devices that don't support SDL}
-Although the Pre has support for SDL, many devices don't, and that's something we've taken into consideration.  The kdrive structure lends itself nicely to 
+Although the Pre has support for SDL, many devices don't, and that's something we've taken into consideration.  The kdrive structure can be made rather portable: at it's heart it just needs something that can render a pixelbufer, and feed it input (either event driven or by polling).  This means that we could potentially support Android devices through JNI (FIXME WTF IS JNI, "java native interface" or something. also, CITE?) passing the buffer to a java app to blit and the java app blitting to the screen, as well as gathering input and feeding it to the X server.
 \subsubsection{Keyboard}
-\subsubsection{Future}
-rootless, etc? 
+Keyboard support is very important when using applications.  However it was a stumbling block for us two main reasons: 1)mapping SDL to something the X server can use 2)adding support for keys and features that are not on the original device.\\
+It is common for keyboards, particularly on phones, to have each key have multiple uses when pressed with a special modifier.  As an example, on the Pre, 'orange' plus 'q' is the '/' key.  This presented a problem because this means capturing the modifier requires creating a state machine to process the input as opposed to a simple lookup table.  We ended up using xkb to do this, and the results are in the xkeyboard-config git repository. \\
+The second issue is that many keys that are required for doing something as simple as using 'xterm' simply don't exist on most phones.  Examples of such characters include the pipe '|' character, '>', '<', arrow keys, and more.  We currently support many such keys on the pre through more customizations to the xkb layout and hope to support other devices as we add support for them as well.
+\subsubsection{Future: Integrating even more}
+A primary goal of our project is to cleanly integrate into the host X server.  While our current implementation is a great step and does integrate as a window in the existing windowing system for the device, there is an issue.  Presently the X server will render everything into one window (see Figure \ref{fig:x_screenie}), which requires a window manager to manage the windows.  This is bad both because it is hard to use but also because it is a hard break from the goal of integrating with the parent window manager--now the user has to think about it as two separate systems.
 
+One solution to this is to take advantage of the work done on rootless X ( http://cgit.freedesktop.org/xorg/xserver/tree/miext/rootless/README.txt for lack of a better citation ).  ``The generic rootless layer allows an X server to be implemented on top of another window server in a cooperative manner. This allows the X11 windows and native windows of the underlying window server to coexist on the same screen. The layer is called "rootless" because the root window of the X server is generally not drawn. Instead, each top-level child of the root window is represented as a separate on-screen window by the underlying window server'' (this /needs/ the git repo citatation, so if you change that put it here).
+
+Another final idea is to take advantage of standard X notification events and hook into mobile device notification systems, which both WebOS and Android support.  This could further allow integration into the host OS, and is particularly useful since many mobile applications are data driven and their primary purpose being getting information to the user. (either remove this last sentence or the paragraph.. or fix it if you can :D).
+
+\begin{figure}[tbh]
+\centering
+\includegraphics[width=1.0\columnwidth]{xchat1}
+\caption{X server running icem and xchat}
+\label{fig:x_screenie}
+\end{figure}
