--- a/final-report/related.tex
+++ b/final-report/related.tex
@@ -4,8 +4,10 @@ Currently, there are many solutions available for virtualization on desktop envi
 
 Recently there has been a surge of research in the area of mobile virtualization.  One such solution is MobiVMM \cite{mobivmm}, which prioritizes performance and security at the cost of usability and portability.  Work has been done to port KVM to ARM \cite{columbia}, focusing on performance and functionality.  All of these solutions either dual-boot the OS or require disabling the phone's existing runtime stack. \\
 
-VMware's MVP project \cite{mvp} is most similar to ours.  They introduce a very thin Type I hypervisor with an emphasis on usability, performance, and security--without sacrificing the phone's functionality.   However their implementation does not integrate with the host OS, but rather replaces and contains it.  This is useful, but tangential to our work.  Open Kernel Lab's OKL4 \cite{okl4} is another implementation of a thin Type I hypervisor and is very similar to MVP.  As described in Section \ref{sec:proposedarch}, we aim to provide a Type II Virtual Machine (VM) and prioritize live migration capabilities as well as usability. Instead of virtualizing the existing OS to protect other Virtual Machines, we assume it to be trusted and only isolate third party applications.  This provides for a very different architecture in our implementation. \\
+VMware's MVP project \cite{mvp} is most similar to ours.  They introduce a very thin Type I hypervisor with an emphasis on usability, performance, and security--without sacrificing the phone's functionality.   However their implementation does not integrate with the host OS, but rather replaces and contains it, with the intention of running multiple OSes.  While this is useful, it is tangential to our work.  Additionally, MVP is still under heavy development, and release has been bumped back to at least 2012.  \\
 
-There also is ARM's TrustZone \cite{trustzone} which is aimed at creating a secure ``TrustZone'', primarily for use in DRM, bank transactions and other similar setups.  The goal is to protect a specialized app from the rest of the system (and protect, for example, secrets and keys from leaking out of this zone).  We aim to to do the opposite: we trust the host OS and are protecting it from the guest applications.
+Open Kernel Lab's OKL4 \cite{okl4} is another implementation of a thin Type I hypervisor and is very similar to MVP.  As described in Section \ref{sec:proposedarch}, we aim to provide a Type II Virtual Machine (VM) and prioritize live migration capabilities as well as usability. Instead of virtualizing the existing OS to protect other Virtual Machines, we assume it to be trusted and only isolate third party applications.  This provides for a very different architecture in our implementation. \\
+
+There also is ARM's TrustZone \cite{trustzone} which is aimed at creating a secure ``TrustZone'', primarily for use in DRM, bank transactions and other similar setups.  The goal is to protect a specialized app from the rest of the system (and protect, for example, secrets and keys from leaking out of this zone).  We aim to to do the opposite: we trust the host OS and are protecting it, secure data, and other applications from the given guest applications.
 
 
