--- a/final-report/TODO
+++ b/final-report/TODO
@@ -12,7 +12,6 @@ Add a DIAGRAM for containers
 Add some design ideas for migration
 
 Implementation:
-Talk about binary modules, removing version checking etc
 Check X stuff for quality control
 
 Evaluation:
@@ -32,4 +31,4 @@ Add more to Future Work
 Conclusion:
 Throw in the git repo url
 
-
+review all items marked as 'comment' in the paper.
