--- a/final-report/mybib.bib
+++ b/final-report/mybib.bib
@@ -187,7 +187,7 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
 @misc{LSM,
   title = "{Linux Security Modules: General Security Support for the Linux Kernel}",
   howpublished = {\url{http://www.usenix.org/event/sec02/full_papers/wright/wright_html/index.html}},
-  author = {Chris Wright, Crispin Cowan, James Morris, Stephen Smalley, and Greg Kroah-Hartman},
+  author = "Chris Wright and Crispin Cowan and James Morris and Stephen Smalley and Greg Kroah-Hartman",
   year = {2002},
   organization = {USENIX Association},
 }
